--- a/Memorizer/app/src/main/res/values/strings.xml
+++ b/Memorizer/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Memorizer</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="level_not_found">Level: Not Found</string>
+    <string name="lives_not_found">Lives: Not Found</string>
+    
+    <dimen name="button_height_width">40dp</dimen>
+    <dimen name="button_margin">3dp</dimen>
 </resources>
